# kaggle_hackathon

./: .gitignore  Dockerfile  Makefile  pyproject.toml
agent/: config.py  graph.py  state.py
agent/nodes/: chat.py  explainer.py  followup.py  lab_analyzer.py  parse.py  radiology_analyzer.py  router.py
agent/prompts/: templates.py
api/: main.py
api/routes/: report.py
api/schemas/: report.py
app/: main.py
app/components/: chat.py  results.py  upload.py
deploy/: modal_app.py
fine_tuning/notebooks/: finetune_gemma4_unsloth.py
tests/: test_e2e.py
