[project]
name = "medsimplify"
version = "0.1.0"
description = "Medical Report Interpreter Agent — explains lab reports and radiology summaries in plain language using Gemma 4"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "babel>=2.18.0",
    "fastapi>=0.135.3",
    "langchain-core>=1.2.26",
    "langchain-ollama>=1.0.1",
    "langdetect>=1.0.9",
    "langgraph>=1.1.6",
    "modal>=1.4.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymupdf>=1.27.2.2",
    "python-multipart>=0.0.24",
    "streamlit>=1.56.0",
    "uvicorn[standard]>=0.44.0",
]
